# arena-python

./: .gitlab-ci.yml  Dockerfile  README.md  arena_test.py  main.py  pyproject.toml  requirements.txt  setup.py  tox.toml
arena/: arena.py  execution.py  introspection.py
arena/engine/: adaptation.py  artifacts.py  classes.py  ssntestdriver.py
arena/lql/: LQL.interp  LQLLexer.interp  LQLLexer.py  LQLListener.py  LQLParser.py  lqlparser.py  lqlparser_test.py
arena/measurement/: codecoverage.py  mutation.py
arena/provider/: gai.py
arena/ssn/: parser.py  parser_test.py  ssn_utilities.py  ssnparser.py
code-samples/base64/917239ca-5093-44a6-a284-64e1acb8ccac/: candidate.py
code-samples/base64/c108afda-e52c-454b-a7ed-c05f48257a9b/: candidate.py
code-samples/base64/c9571f41-161b-46ed-a528-941d96a0dd2b/: candidate.py
code-samples/base64_functions/917239ca-5093-44a6-a284-64e1acb8ccac/: candidate.py
code-samples/base64_functions/c108afda-e52c-454b-a7ed-c05f48257a9b/: candidate.py
code-samples/base64_functions/c9571f41-161b-46ed-a528-941d96a0dd2b/: candidate.py
code-samples/base64_functions_adapt/917239ca-5093-44a6-a284-64e1acb8ccac/: candidate.py
lasso/job/: ignite.py
lasso/srh/: serialize.py
notebooks/: base64_example.ipynb  list_example.ipynb  llm_ollama_example.ipynb  llm_ollama_example_adaptation.ipynb
ssl/: lasso_selfsigned_cert.pem  lasso_selfsigned_key.pem
tests/: arena_test.py  artifacts_test.py  classes_test.py  debugging_test.py  gai_test.py  integration_test.py  lqlparser_test.py  mutants_test.py  ssn_utilities_test.py  ssnparser_test.py
